[package]
name = "evolution-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feature = "0.5.1"
nalgebra = {version="0.32.3", features=["serde", "serde-serialize"]}
rand = "0.8.5"
serde = { version = "1.0.180", features = ["derive"] }

[dev-dependencies]
ciborium = "0.2.1"
ggez = "0.9.3"
glam = { version = "0.24.1", features = ["serde"] }
serde_json = "1.0.104"
